<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_dynamic_item"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:elevation="10dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderImage="@drawable/ic_baseline_image_not_supported_24"
            app:placeholderImageScaleType="centerCrop"
            app:roundedCornerRadius="10dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_text_view_red"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/title_s"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_dynamic_item" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/drawable_text_background_red_stroke_dim_background"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="10dp"
            android:text="@string/description_s"
            android:textAlignment="center"
            android:textColor="@color/internation_orange_gate_bridge"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_dynamic_item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dynamic_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/drawable_text_background_red_stroke_dim_background"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="10dp"
            android:text="@string/dynamic"
            android:textAlignment="viewStart"
            android:textColor="@color/internation_orange_gate_bridge"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>